fix position add game

--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -135,14 +135,12 @@
                         </div>
                     </div>
                     <!-- card add -->
-                    <div class="card col-4 col-lg-2 ml-2 mr-2 mb-3 card-custom" data-toggle="modal" data-target="#formCreate">
-                        <div class="img-container">
+                    <div class="card col-4 col-lg-2 ml-2 mr-2 mb-3 card-custom border-0" data-toggle="modal" data-target="#formCreate">
+                        <div class="img-container d-flex flex-column justify-content-center align-item-center imgContainerCustom mx-auto mt-auto mb-auto">
                             <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="plus-circle" class="svg-inline--fa fa-plus-circle fa-w-16 card-img-top card-img-custom" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                                 <path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"></path>
                             </svg>
-                        </div>
-                        <div class="card-body card-body-custom">
-                            <p class="card-text">Ajouter un jeux</p>
+                            <p class="card-text text-center">Ajouter un jeux</p>
                         </div>
                     </div>
                 </div>
