--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="form-group mt-4 mb-2 d-flex justify-content-center">
 
-                    <button type="submit" name="registration" class="btn btn-primary btn-update">Valider les modifications</button>
+                    <button type="submit" id="submit-update" name="registration" class="btn btn-primary btn-update">Valider les modifications</button>
                 </div>
             </form>
         </section>
