--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -104,11 +104,10 @@
         </section>
         <hr class="col-6 my-5 mx-auto" />
         <section id="games">
-            <div class="pcard"></div>
             <div class="container containerTitleStyle">
                 <h2 class="col-sm-12 p-0 title">Mes jeux:</h2>
             </div>
-            <div class="fluid-container">
+            <div class="container-fluid">
                 <div class="row justify-content-center">
                     <div class="card col-4 col-lg-2 ml-2 mr-2 mb-3 card-custom" th:each="gameRegistration : ${gamesRegistration}">
                         <div class="img-container d-flex justify-content-center imgContainerCustom">
