Added test in modelService to prevent user from subscribe several times on same event

--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -19,13 +19,12 @@
         var hasSubscribe = "[[${hasSubscribe}]]";
     </script>
 </head>
-
 <body>
 	<header th:replace="navBar.html :: top"></header>
     <main>
-        <section class="container-fluid">
+        <section class="container-fluid" id="myRegistration">
 	        <div class="row justify-content-center">
-	        	<h1 class="col-12 text-center mb-5 mt-3" id="myRegistration">Modification de mes informations d'incription</h1>
+	        	<h1 class="col-12 text-center mb-5 mt-3">Modification de mes informations d'incription</h1>
 	        </div>
             <div class="container containerTitleStyle">
                 <h2 id="infos" class="col-sm-12 p-0 mb-4 title">Mes informations générales</h2>
@@ -221,6 +220,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="../JS/updateEditorRegistration.js"></script>
     <script src="../JS/picturePreview.js"></script>
+    <script src="../JS/updateEditorRegistration.js"></script>
+    <script src="../JS/main.js"></script>
 </body>
 
 </html>
