--- a/src/main/resources/templates/navBar.html
+++ b/src/main/resources/templates/navBar.html
@@ -27,7 +27,7 @@
 	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'subscribeEditorModification'" href="#myRegistration">Mes informations générales</a>
 	        </li>
 	        <li class="nav-item mx-auto">
-	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'home'" href="#inscription">Mon Inscription</a>
+	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'home'" href="#inscription">Mes Inscriptions</a>
 	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'subscribeEditorModification'" href="#games">Mes Jeux</a>
 	        </li>
 	        <li class="nav-item mx-auto">
