--- a/src/main/resources/static/CSS/style.css
+++ b/src/main/resources/static/CSS/style.css
@@ -305,7 +305,10 @@ input:checked ~ .switch_on {
 .subscribeModifBtn {
 	
 	height: 3rem;
-	font-size: 1.4rem;
+	font-size: 1.2rem;
+    min-width: 200px;
+    width: 220px;
+    
 }
 
 .stateBadge {
@@ -347,9 +350,7 @@ input:checked ~ .switch_on {
 		font-size: 1.2rem;
 	}
 	
-	.subscribeModifBtn {
-		font-size: 1.2rem!important;
-	}
+
 	
 	.pcard {
 		height: 2rem;
