--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -161,11 +161,11 @@
                         <table class="table table-striped table-bordered card-custom">
                             <thead class="theadAgent">
                                 <tr>
-                                    <th class="col-3" scope="col">Nom</th>
-                                    <th class="col-3" scope="col">Prénom</th>
-                                    <th class="col-2" scope="col">Téléphone</th>
-                                    <th class="col-3" scope="col">Mail</th>
-                                    <th class="col-1" scope="col">Action</th>
+                                    <th class="col-6 col-lg-3" scope="col">Nom</th>
+                                    <th class="col-6 col-lg-3" scope="col">Prénom</th>
+                                    <th class="col-4 col-lg-2" scope="col">Téléphone</th>
+                                    <th class="col-6 col-lg-3" scope="col">Mail</th>
+                                    <th class="col-3 col-lg-1" scope="col">Action</th>
                                 </tr>
                             </thead>
                             <tbody>
