--- a/src/main/resources/templates/navBar.html
+++ b/src/main/resources/templates/navBar.html
@@ -32,7 +32,7 @@
 	        </li>
 	        <li class="nav-item mx-auto">
 	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'home'" href="#information">Mes Informations</a>
-	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'subscribeEditorModification'" href="#agents">Mes Collaborateurs</a>
+	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'subscribeEditorModification'" href="#myAgents">Mes Collaborateurs</a>
 	        </li>
 	        <div class="dropdown-divider mt-3 mb-0"></div>
 	        <li class="nav-item mx-auto d-block d-lg-none mt-3">
