--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -147,7 +147,7 @@
             <div th:replace="modaleCreateGame :: modaleCreation"></div>
         </section>
         <hr id="agents" class="col-6 my-5 mx-auto" />
-		<section>
+		<section id="myAgents">
             <div class="container containerTitleStyle">
                 <h2 class="col-sm-12 p-0 mb-5 title">Mes collaborateurs présents à l'évenement:</h2>
             </div>
